SOCC: fixed spacing again

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ Characters
 }
 
 .character-spacing {
-  height: 1380px;
+  height: 1350px;
 }
 
 /**********************
